--- a/trang_cv_ca_nhan/index.html
+++ b/trang_cv_ca_nhan/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML links</title>
 </head>
-<body>
+<body style="background-color: pink">
 <h2 style="text-align: center">Phan Nguyễn Đình Trọng</h2>
 <pre><img style="float:left;width:400px;height:300px" src="https://img.meta.com.vn/Data/image/2022/01/13/hinh-anh-em-be-de-thuong-5.1.jpg"
          alt="ảnh cá nhân" style="float:left">
