--- a/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai1.html
+++ b/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai1.html
@@ -7,10 +7,9 @@
 <body>
 </body>
 <script>
-    let num1 = +(prompt("nhập số a: "));
-    let num2 = +(prompt("nhập số b: "));
-    let result;
-    if(num1%num2==0){
+    let numFirst = +(prompt("nhập số a: "));
+    let numSecond = +(prompt("nhập số b: "));
+    if(num1 % num2 == 0){
         alert("a chia hết cho b");
     }else{
         alert("a không chia hết cho b");
