--- a/CauLenhSwitchCase.html
+++ b/CauLenhSwitchCase.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[Bài tập] Câu lệnh switch-case</title>
 </head>
 <body>
 <form>
