--- a/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai1.html
+++ b/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[Bài tập] Tính chỉ số cân nặng của cơ thể</title>
+    <title>Luyện tập cấu trúc điều kiện 01 - Bài 1</title>
 </head>
 <body>
 </body>
