--- a/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai2.html
+++ b/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai2.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luyện tập cấu trúc điều kiện 01 - Bài 2</title>
 </head>
 <body>
 </body>
 <script>
   let age = +(prompt("nhập tuổi: "))
-  if (age != 16){
+  if (age < 16){
       alert("học sinh " + age + ' tuổi không đủ điều kiện vào học lớp 10')
   }
 </script>
