--- a/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai4.html
+++ b/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luyện tập cấu trúc điều kiện 01 - Bài 4</title>
 </head>
 <body>
 </body>
@@ -10,9 +10,9 @@
     let a = +(prompt("nhập vào số a "));
     let b = +(prompt("nhập vào số b "));
     let c = +(prompt("nhập vào số c "));
-    if(a>b && a>c){
+    if(a > b && a > c){
         alert(a + " là số lớn nhất");
-    }else if(b>c){
+    }else if(b > c){
         alert(b + " là số lớn nhất");
     }else{
         alert(c +" là số lớn nhất");
