--- a/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai6.html
+++ b/LuyenTapCauTrucDieuKien01/LuyenTapCauTrucDieuKien01-Bai6.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luyện tập cấu trúc điều kiện 01 - Bài 6</title>
 </head>
 <body>
 </body>
 <script>
     let a = +(prompt("nhập doanh số"));
-    if(a<=100){
-        alert(" hoa hồng bạn nhận được là 5% : " + a*5/100 + " triệu");
-    }else if(a<=300){
-        alert(" hoa hồng bạn nhận được là 10% : " + a*10/100 + " triệu");
+    if(a <= 100){
+        alert(" hoa hồng bạn nhận được là 5% : " + a * 5 / 100 + " triệu");
+    }else if(a <= 300){
+        alert(" hoa hồng bạn nhận được là 10% : " + a * 10 / 100 + " triệu");
     }else{
-        alert(" hoa hồng bạn nhận được là 20% : " + a*20/100 + " triệu");
+        alert(" hoa hồng bạn nhận được là 20% : " + a * 20 / 100 + " triệu");
     }
 </script>
 </html>
