--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai4.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai4</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
 <script>
     let a = +prompt("nhập cạnh a");
     let b = +prompt("nhập cạnh b");
-    S = a*b;
+    S = a * b;
     alert(S);
 </script>
 </html>
