--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai5.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai5</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
 <script>
     let a = +prompt("nhập cạnh kề thứ nhất ");
     let b = +prompt("nhập cạnh kề thứ hai");
-    S = (a*b)/2;
+    S = (a * b) / 2;
     alert(S);
 </script>
 </html>
