--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai6.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai6</title>
 </head>
 <body>
 
@@ -10,14 +10,14 @@
 <script>
     let a = +prompt("nhập cơ số a cho phương trình bậc 1: ax+b=0");
     let b = +prompt("nhập cơ số b cho phương trình bậc 1: ax+b=0");
-    if(a=0){
-        if(b=0){
+    if(a = 0){
+        if(b = 0){
             alert("phương trình có vô số nghiệm");
         }else{
             alert(("phương trình vô nghiệm"));
         }
     }else{
-        alert("phương trình có nghiệm: "+-b/a);
+        alert("phương trình có nghiệm: " + -b / a);
     }
 </script>
 </html>
