--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai7.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai7</title>
 </head>
 <body>
 </body>
@@ -14,10 +14,10 @@
     if (delta > 0) {
         x1 = (-b + Math.sqrt(delta)) / (2 * a);
         x2 = (-b - Math.sqrt(delta)) / (2 * a);
-        alert("phương trình có 2 nghiệm phân biệt là: "+x1+", "+x2);
+        alert("phương trình có 2 nghiệm phân biệt là: " + x1 + ", " + x2);
     }else if (delta == 0) {
        x = -b / (2 * a);
-        alert("phương trình có nghiệm kép là: x1=x2="+x);
+        alert("phương trình có nghiệm kép là: x1 = x2 = " + x);
     }else {
         alert("phương trình vô nghiệm");
     }
