--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai8.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai8.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai8</title>
 </head>
 <body>
 </body>
 <script>
     let a =+prompt("nhập tuổi bất kỳ: ");
-    if(a>0&&a<120){
+    if(a > 0 && a < 120){
         alert("tuổi hợp lệ");
     }else{
         alert("tuổi không hợp lệ");
