--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai9.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai9</title>
 </head>
 <body>
 </body>
@@ -10,8 +10,8 @@
     let a = +prompt("nhập vào cạnh a");
     let b = +prompt("nhập vào cạnh b");
     let c = +prompt("nhập vào cạnh c");
-    if(a>0&&b>0&&c>0){
-        if(a+b>c&&a+c>b&&b+c>a){
+    if(a > 0 && b > 0 && c > 0){
+        if( a + b > c && a + c > b && b + c > a){
             alert("3 cạnh vừa nhập là 3 cạnh tam giác");
         }else{
             alert("đây không phải là tam giác");
