--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai10.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai10.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai10</title>
 </head>
 <body>
 </body>
 <script>
     let a = +prompt("nhập số điện: ");
-    if(a <=100){
-        alert("số tiền phải trả là " + a*1000 + " đồng");
+    if(a <= 100){
+        alert("số tiền phải trả là " + a * 1000 + " đồng");
     }else if(a <= 150){
-        alert("số tiền phải trả là " + a*1200 + " đồng");
+        alert("số tiền phải trả là " + a * 1200 + " đồng");
     }else if(a <=200){
-        alert("số tiền phải trả là " + a*2000 + " đồng");
+        alert("số tiền phải trả là " + a * 2000 + " đồng");
     }else{
-        alert("số tiền phải trả là " + a*2500 + " đồng");
+        alert("số tiền phải trả là " + a * 2500 + " đồng");
     }
 </script>
 </html>
