--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai12.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai12.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapCauTrucDieuKien02-bai12</title>
 </head>
 <body>
 </body>
 <script>
     let money = +prompt("Nhập số tiền của bạn tại đây:");
     let month = +prompt("Nhập số tháng bạn muốn vay");
-    alert("Số tiền bạn phải trả ngân hàng là: "+money*(1+(15/100)*month) + "VND");
+    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1+(15/100) * month) + "VND");
 </script>
 </html>
