--- a/HienThiCacSoNguyenToDauTien.html
+++ b/HienThiCacSoNguyenToDauTien.html
@@ -2,16 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiển thị các số nguyên tố đầu tiên</title>
 </head>
 <body>
 <script>
-    let numbers = +prompt("nhập số lượng số nguyên tố cần in ra");
-    let count = 0;
-    while (count < numbers) {
-        for (let i = 0; i < 2000; i++) {
-            if (2000 % i != 0){
-            }count++;
+    var count = 0;
+    var numbers = +prompt("nhập vào số lượng số nguyên tố muốn in ra");
+    while (numbers <= 0) {
+        numbers = +prompt("nhập vào một số dương");
+    }
+    for (var i = 2; numbers > count; i++) {
+        for (var j = 1; j < i; j++) {
+            if (i % j === 0) {
+                count++;
+            }
+        }
+        if (count === 1) {
+            document.write(i);
         }
     }
 </script>
