--- a/MayTinhDonGian.html
+++ b/MayTinhDonGian.html
@@ -5,6 +5,51 @@
     <title> Simple Calculator using HTML, CSS and JavaScript </title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<style>@font-face {
+    font-family: 'Orbitron';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/orbitron/v29/yMJMMIlzdpvBhQQL_SC3X9yhF25-T1nyGy6BoWgz.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+.calculator {
+    padding: 10px;
+    border-radius: 1em;
+    height: 380px;
+    width: 400px;
+    margin: auto;
+    background-color: #191b28;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.display-box {
+    font-family: 'Orbitron', sans-serif;
+    background-color: #dcdbe1;
+    border: solid black 0.5px;
+    color: black;
+    border-radius: 5px;
+    width: 100%;
+    height: 65%;
+}
+#btn {
+    background-color: #fb0066;
+}
+input[type=button] {
+    font-family: 'Orbitron', sans-serif;
+    background-color: #64278f;
+    color: white;
+    border: solid black 0.5px;
+    width: 100%;
+    border-radius: 5px;
+    height: 70%;
+    outline: none;
+}
+input:active[type=button] {
+    background: #e5e5e5;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+    -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
+}</style>
 <body>
 <table class="calculator" >
     <tr>
@@ -35,7 +80,7 @@
         <td> <input type="button" value="." onclick="display('.')" /> </td>
         <td> <input type="button" value="0" onclick="display('0')" /> </td>
         <!-- calculate() function evaluate the mathematical expression -->
-        <td> <input type="button" value="=" onclick="calculate()"/> </td>
+        <td> <input type="button" value="=" onclick="calculate()" id="btn" /> </td>
         <td> <input type="button" value="*" onclick="display('*')" /> </td>
     </tr>
 </table>
@@ -54,8 +99,8 @@
     // This function evaluates the expression and return result
     function calculate() {
         var p = document.getElementById("result").value;
-        document.getElementById("result").value = eval(p);
-        //eval() method này thực hiện các phép toán được truyền vào ex:  let a = 1+2+3+4; eval(a)
+        var q = eval(p);
+        document.getElementById("result").value = q;
     }
 </script>
 </body>
