--- a/tinhChiSoCanNangCuaCoThe.html
+++ b/tinhChiSoCanNangCuaCoThe.html
@@ -32,7 +32,7 @@
         } else if (bmi < 30.0) {
             document.getElementById("Result").innerHTML = 'Overweight';
         } else {
-            document.getElementById("Result").innerText = 'Obese';
+            document.getElementById("Result").innerHTML = 'Obese';
         }
     }
 </script>
