--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai3.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luyện tập cấu trúc điều kiện 02 - Bài 3</title>
 </head>
 <body>
 </body>
