--- a/HienThiCacSoNguyenToDauTien.html
+++ b/HienThiCacSoNguyenToDauTien.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiển thị các số nguyên tố đầu tiên</title>
+    <title>Hiển thị n số nguyên tố</title>
 </head>
 <body>
 <script>
-    var count = 0;
-    var numbers = +prompt("nhập vào số lượng số nguyên tố muốn in ra");
-    while (numbers <= 0) {
-        numbers = +prompt("nhập vào một số dương");
-    }
-    for (var i = 2; numbers > count; i++) {
-        for (var j = 1; j < i; j++) {
+    let number, count = 0, a;
+    let i, j;
+    numbers = +prompt("nhap vao so luong muon in ra");
+    for (i = 2; ; i++) {
+        a = 0;
+        for (j = 1; j <= i; j++) {
             if (i % j === 0) {
-                count++;
+                a++;
             }
         }
-        if (count === 1) {
-            document.write(i);
+        if (a === 2) {
+            count++;
+            document.writeln(i);
+        }
+        if (count === numbers) {
+            break;
         }
     }
 </script>
