bai tap vong lap

--- a/LuyenTapVongLap01-bai6.html
+++ b/LuyenTapVongLap01-bai6.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapVongLap01-bai6</title>
 </head>
 <body>
-
+<script>
+    let sum = 0, count = 0, i = 7;
+    for (i = 7; count < 30; i++) {
+        if (i % 7 == 0) {
+            sum += i;
+            count++;
+        }
+    }
+    document.writeln(sum);
+</script>
 </body>
 </html>
