--- a/LuyenTapVongLap01-bai7.html
+++ b/LuyenTapVongLap01-bai7.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LuyenTapVongLap01-bai7</title>
 </head>
 <body>
-
+<script>
+    let i = 1;
+    for (i; i <= 100; i++) {
+        if (i % 3 == 0 && i % 5 == 0) {
+            document.writeln("FizzBuzz");
+        } else if (i % 3 == 0) {
+            document.writeln("Fizz");
+        } else if (i % 5 == 0) {
+            document.writeln("Buzz");
+        } else {
+            document.writeln(i);
+        }
+    }
+</script>
 </body>
 </html>
