--- a/trang_cv_ca_nhan/test.html
+++ b/trang_cv_ca_nhan/test.html
@@ -10,33 +10,30 @@
 
 </body>
 <script>
-  function isPrime(x) {
-    if (x<2) {
-      return false;
-    } else {
-      let cnt=0;
-      for ( i=2; i<=Math.sqrt(x); i++ ) {
-        if (x%i==0) {
-          cnt++;
-        }
-      }
-      if (cnt==0) {
-        return true;
-      }else {
-        return false;
-      }
-    }
-  }
+    let chieuDai,chieuRong,canhDai,canhDaiRong,j,i;
+    function main() {
+         chieuDai = Number(prompt("Nhập chiều dài"))
+         chieuRong = Number(prompt("Nhập chiều rộng"))
+         canhDai = ''
+         canhDaiRong = ''
 
-  let number=parseInt(prompt("Enter number"));
-  let count=0;
-  let N=2;
-  while (count <= number) {
-    if (isPrime(N) == true) {
-      document.write(N +"<br>");
+        for (j = 1; j <= chieuRong; j++) {
+            canhDai += '*'
+            if (j == 1 || j == chieuRong) {
+                canhDaiRong += '*'
+            } else {
+                canhDaiRong += ' '
+            }
+        }
+
+        for ( i = 1; i <= chieuDai; i++) {
+            if (i == 1 || i == chieuDai) {
+                console.log(canhDai)
+            } else {
+                console.log(canhDaiRong)
+            }
+        }
     }
-    N++;
-    count++;
-  }
+    main();
 </script>
 </html>
