--- a/LuyenTapVongLap02/LuyenTapVongLap02-bai2.html
+++ b/LuyenTapVongLap02/LuyenTapVongLap02-bai2.html
@@ -10,7 +10,7 @@
     do {
         numFirst = +prompt("nhập vào số nguyên dương muốn tìm giai thừa");
     } while (numFirst <= 0);
-    for (i = 1; i <= numFirst; i++) {
+    for (i = numFirst; i > 1; i--) {
         a *= i;
     }
     document.write(a)
