--- a/Mang_day1/SuDungCacHamCoSanCuaMang.html
+++ b/Mang_day1/SuDungCacHamCoSanCuaMang.html
@@ -24,17 +24,27 @@
     }
     document.write(result.join(''));
     // bài 3
-    const num = window.prompt();
-    const str = num.toString();
-    const result = [str[0]];
-
-    for (let x = 1; x < str.length; x++) {
-        if ((str[x - 1] % 2 === 0) && (str[x] % 2 === 0)) {
-            result.push('-', str[x]);
-        } else {
-            result.push(str[x]);
-        }
+    var str = 'The Quick Brown Fox';
+    var UPPER = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    var LOWER = 'abcdefghijklmnopqrstuvwxyz';
+    var result = [];
+  
+  for(var x=0; x<str.length; x++)
+  {
+    if(UPPER.indexOf(str[x]) !== -1)
+    {
+      result.push(str[x].toLowerCase());
     }
-    document.write(result.join(''));
+    else if(LOWER.indexOf(str[x]) !== -1)
+    {
+      result.push(str[x].toUpperCase());
+    }
+    else 
+    {
+      result.push(str[x]);
+    }
+  }
+document.write(result.join(''));
+
 </script>
 </html>
