--- a/LuyenTapMang01/bai9.html
+++ b/LuyenTapMang01/bai9.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <script>
-    let index = 0;
     let a = new Array();
     for (let i = 0; i < 10; i++) {
         a[i] = prompt("nhập phần tử thứ " + (i + 1) + " mảng a");
@@ -15,15 +14,7 @@
     for (let i = 0; i < 10; i++) {
         b[i] = prompt("nhập phần tử thứ " + (i + 1) + " mảng b");
     }
-    let arr = new Array();
-    for (let i = 0; i < a.length; i++) {
-        arr[i] = a[i];
-        index++;
-    }
-    for (let i = 0; i < b.length; i++) {
-        arr[index] = b[i];
-        index++;
-    }
+    let arr = a.concat(b);
     document.write(arr);
 </script>
 </body>
