--- a/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai12.html
+++ b/LuyenTapCauTrucDieuKien02/LuyenTapCauTrucDieuKien02-bai12.html
@@ -9,18 +9,6 @@
 <script>
     let money = +prompt("Nhập số tiền của bạn tại đây:");
     let month = +prompt("Nhập số tháng bạn muốn vay");
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1 + (15 / 100) * month) + "VND");
-=======
-    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1+(15/100) * month) + "VND");
->>>>>>> 1673dbe1a959854292fd9676162aa435412ef140
-=======
-    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1+(15/100) * month) + "VND");
->>>>>>> 8ac209262ffe76d0658fe89a66c58bb986c6edf0
-=======
-    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1+(15/100) * month) + "VND");
->>>>>>> 3e3c31a9b1b3dd8dcc26651e3f49d748095ee432
+    alert("Số tiền bạn phải trả ngân hàng là: " + money * (1.15) * month) + "VND");
 </script>
 </html>
