--- a/OOP/LopMoTaHinhChuNhat.html
+++ b/OOP/LopMoTaHinhChuNhat.html
@@ -31,7 +31,7 @@
             return this.width * this.height;
         }
 
-        drawRectangle(width, heigth) {
+        drawRectangle() {
             var canvas = document.getElementById("DemoCanvas");
             var ctx = canvas.getContext('2d');
             ctx.fillStyle = '#ffc0CB';
